Add temporary OpenAPI specification for trips
